k8s/backend-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: backend
spec:
  replicas: 1  # Adjust the replica count as needed
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          volumeMounts:
            - name: mysql-init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: mysql-init-config
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
