k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3306  # MySQL default port
      targetPort: 3306
  clusterIP: None  # This makes it a headless service, useful for stateful applications
