k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80          # Port exposed within the cluster
      targetPort: 5000  # Port on the pods
      nodePort: 30000
  type: NodePort  # Use ClusterIP or NodePort for internal access only
